syntax = "proto3";

option go_package = "./;api";
package main;
import public "github.com/gogo/protobuf/gogoproto/gogo.proto";
message ShopResponse{
  int64 Code = 1;
  string Msg = 2;
}
message ShopRequest{
  string Tid = 1;
  int64 RefundId = 2;
}
message ShopOrderResponse{
  int64 Code = 1;
  string Msg = 2;
  Order Order = 3;
}
message Order{
  int64 Id = 1;
  int64 ShopId = 2;
  string Tid = 3;
  int64 RefundId = 4;
  int64 Type = 5;
  int64 CurrentVersion = 6;
  string content = 7;
}
service Shop{
  rpc GetShopOrderLog(ShopRequest) returns(ShopOrderResponse);
  rpc AddShopOrderLog(Order)returns(ShopResponse);
}
